# CDMO_Formulation_LLM

./: .env  README.md  cmc_part2_test.py  failed_Non_PMCID_scraped_content_articles.txt  pmc_server_downloader.py  pyproject.toml  test.py
Helper_Functions/Counters/: Elsevier_PII_overlap.py  Publisher_Map.py  check_missing_papers.py  csv_count.py  csv_vs_csv.py  csv_vs_jsonl.py  final_missing_gap.txt  identifier_elsevier.py  json_count.py  longlist_vs_csv.py  withpmcidstillmissing_36_Elseveir.txt
Helper_Functions/Fail_Auditor/: audit_pmc_failures.py  pmc_oa_failures.txt  unpaywall_check.py
Helper_Functions/Format_converter/: 333_failed_Non_PMCID_scraped_content_articles_converted_source_data.txt  Elsevier_PII_converter.py  pmc_oa_failures_converted_source_data.txt  pmc_oa_failures_converter.py
Helper_Functions/ID_Reviewers/: Extract_PMC_to_Elsevier.py
ID_Reviewers/PubMed_esearch_idconv/: pmc_count_pmidANDpmcid_scrape.py
QA_Generation/: formulation_part1_test.py
QA_Generation/Nintedanib_pdf_gemini2.5/: QA_generator_full.py
Scrapers/API_provided/: pmc_jsonl.py
Scrapers/Elsevier/: 133_download_log.jsonl  Elsevier.py  Elsevier_apikey.py  Elsevier_batches.py  Elsevier_check_status.py  config.json
Scrapers/PMC/: PMC12326358.txt  PMC12326358_gemini2.5_qapairs.txt  pmc_batch_downloader.py  (+2 more)
Ubuntu_Script/: Elsevier_server_QA.py  Fix_error_pmc_server_QA_generator_txt.py  master_script.py  pmc_server_QA_generator.py  pmc_server_QA_generator_PDF.py  pmc_server_QA_generator_txt.py  pmc_unpaywall_metatag_concurrent.py
finallist_0108/: full_list
log/: procedure
(+121 files in other folders)
