[tool.poetry]
name = "pharma_scraper"
version = "0.1.0"
description = "Pharma RAG Scraper"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pharma_scraper", from = "src"}]

[tool.poetry.dependencies]
# This fixes the version error by forcing Python 3.10 or newer
python = "^3.10"
requests = "*"
elsapy = "*"
curl-cffi = "*"
google-genai = "*"
pydantic = "*"
beautifulsoup4 = "*"
pypdf = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"